# testkit-samples

./: README.md
core-testsuite-template/: 1_Warning.txt  Makefile.am  Makefile.in  README  autogen  configure  configure.ac  core-testsuite-template-1.0.0-1.i586.rpm  core-testsuite-template-1.0.0-1.src.rpm  core-testsuite-template-debugsource-1.0.0-1.i586.rpm  core-testsuite-template.spec  kernel-headers-2.6.37-1.1.i586.rpm  tests.xml
core-testsuite-template/autom4te.cache/: output.0  traces.0  traces.1
core-testsuite-template/src/: Makefile.am  Makefile.in  core-testsuite-example.c
webapi-testsuite-template/: 3_Warning.txt  COPYING  Changelog  Makefile  Makefile.am  Makefile.in  README  WRTLauncher  autogen  config.status  config.xml  config.xml.crx  config.xml.wgt  configure  configure.ac  index.html  inst.sh.apk  inst.sh.xpk  manifest.json  pack.sh  resultstyle.xsl  template.spec  testcase.xsl  testresult.xsl  tests.css  tests.result.xml  tests.xml  webapi-testsuite-template.spec
webapi-testsuite-template/MyTestCase/: Makefile.am  README  audio_play_ogg_vorbis.html  blacklist_example.html  bluetoothmanager_getdefaultadapter_base.html  template.html  template1.html  template2.html  window_tizen_attribute_exists.html
webapi-testsuite-template/common/: 0_Warning.txt  1_Warning.txt  Makefile.am  media.js
webapi-testsuite-template/mytest/: Makefile  Makefile.am  Makefile.in  audio_play_ogg_vorbis.html  blacklist_example.html  bluetoothmanager_getdefaultadapter_base.html  template.html  window_tizen_attribute_exists.html
(+26 files in other folders)
