
AC_INIT([webapi-testsuite-template], [1.0.0], [zhiqiang.zhang@intel.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

# Checks for programs.
#AC_PROG_CC

AC_CONFIG_FILES([Makefile \
    MyTestCase/Makefile \
    MyTestCase/support/Makefile \
    common/Makefile \
    resources/Makefile \
    testkit/Makefile])
AC_OUTPUT
